fix: fix x overflow for tablet

--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -1,5 +1,6 @@
 .contacts {
   position: relative;
+
   &::after {
     content: "";
     display: block;
@@ -7,12 +8,13 @@
     transform: translate(-50%, -50%);
     overflow: visible;
     top: 5px;
-    right: -25px;
+    right: -15px;
     width: 161px;
     height: 161px;
     background-image: url("../images/contacts.svg");
     @include forTablet {
-      right: -155px;
+      right: -80px;
+
     }
     @include forMobile {
       display: none;
