--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -3,6 +3,7 @@
   height: 80px;
   justify-content: space-evenly;
   align-items: center;
+  overflow: hidden;
 
   &__rectangle {
     @media (max-width: 1023px) {
