--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,7 +19,6 @@ body {
   &__block {
     margin: 0 auto 150px;
     position: relative;
-    overflow: hidden;
     @media (max-width: 480px) {
       margin: 0 auto 110px;
     }
